# thesis_code

./: LICENSE
dpdk_demo/: Makefile  dpdk_arp_utils.h  dpdk_common.h  dpdk_receiver.c  dpdk_sender.c
dpdk_seastar_demo/: CMakeLists.txt
dpdk_seastar_demo/src/: simple_consts.hpp  simple_dpkd_client.cpp  simple_dpkd_server.cpp
fast_net/: .dockerignore  .env  .gitmodules  CMakeLists.txt  Dockerfile  README.md  aws_setup.py  aws_setup.sh  exp.py  exp_client.py  exp_server.py
fast_net/libs/liburing/test/: read-mshot-empty.c  regbuf-merge.c
fast_net/src/: buffer_pool.hpp  client.cpp  client_iou.cpp  consts.hpp  io_uring_utils.hpp  max_client.cpp  max_server.cpp  memory_block.hpp  server.cpp  server_iou.cpp  simple_consts.hpp  simple_iou_client.cpp  simple_iou_server.cpp  static_config.hpp  utils.hpp
fast_net/src/models/: get_page.hpp
io_uring_fast_net_new/: .gitignore  CMakeLists.txt  build.sh  ips.txt  run.sh  run2.sh  run3.sh  sync.sh
io_uring_fast_net_new/src/: client.cpp  client_s.cpp  server.cpp  server_s.cpp  static_config.cpp  static_config.hpp  thread_utils.hpp
raw_results_and_plots/: throughput_summary.csv  throughput_summary_per_bucket.csv
raw_results_and_plots/older/: plot.py  plot2.py  plot3.py  report_client_2024-10-05_20-58-37.csv  report_client_2024-10-05_21-00-54.csv  report_client_2024-10-05_21-05-50.csv  report_client_2024-10-05_21-05-50_env  report_client_2024-10-05_21-17-54.csv  report_server_2024-10-05_20-58-37.csv  report_server_2024-10-05_21-00-54.csv  report_server_2024-10-05_21-05-50.csv
raw_results_and_plots/reports_2024OCT3_param_tests/: report_client_2024-10-03_15-05-13.csv  report_client_2024-10-03_15-05-13_env  report_client_2024-10-03_15-06-18.csv  report_client_2024-10-03_15-07-23.csv  report_client_2024-10-03_15-08-28.csv  report_client_2024-10-03_15-08-28_env  report_client_2024-10-03_15-09-33.csv  report_client_2024-10-03_15-10-38.csv  report_client_2024-10-03_15-11-43.csv  report_client_2024-10-03_15-12-48.csv  report_client_2024-10-03_15-13-53.csv  report_client_2024-10-03_15-14-58.csv  report_client_2024-10-03_15-14-58_env  report_client_2024-10-03_15-16-03.csv  report_client_2024-10-03_15-16-03_env  report_client_2024-10-03_15-17-08.csv  report_client_2024-10-03_15-17-08_env  report_client_2024-10-03_15-18-13.csv  report_client_2024-10-03_15-19-18.csv  report_client_2024-10-03_15-19-18_env  report_client_2024-10-03_15-20-24.csv  report_client_2024-10-03_15-21-29.csv  report_client_2024-10-03_15-21-29_env  report_server_2024-10-03_15-05-13.csv  report_server_2024-10-03_15-06-18.csv  report_server_2024-10-03_15-06-18_env  report_server_2024-10-03_15-07-23.csv  report_server_2024-10-03_15-07-23_env  report_server_2024-10-03_15-08-28.csv  report_server_2024-10-03_15-09-33.csv  report_server_2024-10-03_15-09-33_env  report_server_2024-10-03_15-10-38.csv  report_server_2024-10-03_15-10-38_env  report_server_2024-10-03_15-11-43.csv  report_server_2024-10-03_15-11-43_env  report_server_2024-10-03_15-12-48.csv  report_server_2024-10-03_15-12-48_env  report_server_2024-10-03_15-13-53.csv  report_server_2024-10-03_15-13-53_env  report_server_2024-10-03_15-14-58.csv  (+10 more)
raw_results_and_plots/reports_2024OCT3_param_tests_2/: report_client_2024-10-04_15-02-44.csv  report_client_2024-10-04_15-04-54.csv  report_client_2024-10-04_15-07-05.csv  report_client_2024-10-04_15-08-10.csv  report_client_2024-10-04_15-09-15.csv  report_client_2024-10-04_15-11-25.csv  report_client_2024-10-04_15-16-50.csv  report_server_2024-10-04_15-03-49.csv  report_server_2024-10-04_15-04-54.csv  report_server_2024-10-04_15-06-00.csv  report_server_2024-10-04_15-09-15.csv  report_server_2024-10-04_15-10-20.csv  report_server_2024-10-04_15-11-25.csv  report_server_2024-10-04_15-12-30.csv  report_server_2024-10-04_15-15-45.csv  throughput_detailed_summary.csv  throughput_plot_data.csv
raw_results_and_plots/reports_2024OCT4_0001/: commands.txt
raw_results_and_plots/reports_2024OCT4_param_test_3/: report_client_2024-10-04_15-24-31.csv  report_client_2024-10-04_15-26-11.csv  report_client_2024-10-04_15-28-41.csv  report_client_2024-10-04_15-28-41_env  report_client_2024-10-04_15-29-31.csv  report_client_2024-10-04_15-31-11.csv  report_client_2024-10-04_15-32-51.csv  report_client_2024-10-04_15-33-41.csv  report_client_2024-10-04_15-33-41_env  report_server_2024-10-04_15-26-11.csv  report_server_2024-10-04_15-27-01.csv  report_server_2024-10-04_15-27-51.csv  report_server_2024-10-04_15-29-31.csv  report_server_2024-10-04_15-30-21.csv  report_server_2024-10-04_15-31-11_env  report_server_2024-10-04_15-32-51.csv  report_server_2024-10-04_15-33-41.csv  report_server_2024-10-04_15-35-21_env  report_server_2024-10-04_15-36-12.csv  report_server_2024-10-04_15-37-02.csv  throughput_detailed_summary.csv  throughput_plot_data.csv
raw_results_and_plots/reports_2024OCT4_param_tests/: report_client_2024-10-04_14-27-02.csv  report_client_2024-10-04_14-27-02_env  report_client_2024-10-04_14-28-07_env  report_client_2024-10-04_14-29-12.csv  report_client_2024-10-04_14-31-22.csv  report_client_2024-10-04_14-33-32.csv  report_client_2024-10-04_14-34-37.csv  report_client_2024-10-04_14-34-37_env  report_client_2024-10-04_14-35-42.csv  report_client_2024-10-04_14-42-12.csv  report_server_2024-10-04_14-25-57.csv  report_server_2024-10-04_14-27-02.csv  report_server_2024-10-04_14-28-07.csv  report_server_2024-10-04_14-29-12.csv  report_server_2024-10-04_14-30-17.csv  report_server_2024-10-04_14-31-22_env  report_server_2024-10-04_14-32-27.csv  report_server_2024-10-04_14-33-32_env  report_server_2024-10-04_14-34-37.csv  report_server_2024-10-04_14-36-47.csv  report_server_2024-10-04_14-36-47_env  report_server_2024-10-04_14-40-02_env  report_server_2024-10-04_14-42-12.csv  throughput_detailed_summary.csv  throughput_plot_data.csv
raw_results_and_plots/reports_param_tests_united/: report_client_2024-10-04_14-25-57.csv  report_client_2024-10-04_14-28-07.csv  report_client_2024-10-04_14-29-12_env  report_client_2024-10-04_14-30-17.csv  (+68 more)
rust_io_uring_demo/: Cargo.toml
(+1147 files in other folders)
